tried to fix the whitespace

--- a/app/styles/_button.scss
+++ b/app/styles/_button.scss
@@ -6,6 +6,7 @@ button.button, a.button {
   border-radius: 0.4rem;
   color: $c-white;
   font-size: 1rem;
+  font-family: 'Roboto Condensed', sans-serif;
   text-align: center;
   outline: none;
 
