--- a/app/styles/_card.scss
+++ b/app/styles/_card.scss
@@ -3,7 +3,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  // transform: translate(0, 50%);
   padding: 2rem 5rem;
   width: 100%;
   max-width: 60rem;
@@ -37,7 +36,6 @@
   &__title {
     margin: 0;
     padding: 1rem;
-    color: #3d3d3d;
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 3rem;
   }
