--- a/app/styles/_form.scss
+++ b/app/styles/_form.scss
@@ -16,7 +16,6 @@
   width: 100%;
   line-height: 1rem;
   font-size: 0.9rem;
-  color: #3d3d3d;
   transition: border-bottom-color linear 0.3s;
 
   &:focus {
