--- a/app/styles/_resets.scss
+++ b/app/styles/_resets.scss
@@ -8,7 +8,8 @@ html {
 
 body {
   margin: 0;
-  font-family: sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
+  color: $c-text;
 }
 
 ul {
