--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -10,6 +10,7 @@ $c-deepBlue: rgb(1,17,75);
 $c-deepBlueLightened: lighten($c-deepBlue, 8);
 $c-lightGreen: rgb(155, 255, 150);
 $c-white: #fefefe;
+$c-text: rgb(61,61,61);
 $c-shadow: rgba(#5b5b5b,.47);
 
 @import 'resets';
